feat(player): replace single role string with multiple VolleyPosition enum roles
- Change `role: String` to `roles: List<VolleyPosition>` in CreatePlayerRequest
- Update Player entity to store roles as an @ElementCollection of VolleyPosition enums
- Disable SQL logging in application.properties for cleaner output